--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,10 @@
 <footer>
   <nav style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);" class="p-2 flex items-center justify-between bg-yellow-50">
     <div class="m-1 flex items-center justify-center text-xs font-semibold">
-      <ul class="text-yellow-900">
-        <li class="p-1 hover:text-yellow-700"><%= link_to "問い合わせフォーム", "https://docs.google.com/forms/d/e/1FAIpQLSdeXY7nQx26ak-9ocBXlJh-ttvN7OqTM8Ayfpw73tBzw_kQ0A/viewform?usp=header" %></li>
-        <li class="p-1 hover:text-yellow-700"><%= link_to "プライバシーポリシー", privacy_policy_path %></li>
-        <li class="p-1 hover:text-yellow-700"><%= link_to "利用規約", terms_of_service_path %></li>
-      </ul>
+        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "問い合わせフォーム", "https://docs.google.com/forms/d/e/1FAIpQLSdeXY7nQx26ak-9ocBXlJh-ttvN7OqTM8Ayfpw73tBzw_kQ0A/viewform?usp=header" %></div>
+        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "プライバシーポリシー", privacy_policy_path %></div>
+        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "利用規約", terms_of_service_path %></div>
     </div>
+    <div class="text-yellow-900">Copyright © 2025 SweetsLog</div>
   </nav>
 </footer>
