edit:フッターレイアウト変更

--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -1,4 +1,4 @@
-<div class="w-[90%] md:w-150 my-8 mx-auto px-6 pt-4 pb-10 container bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
+<div class="w-[90%] md:w-150 my-8 mx-auto px-6 pt-4 pb-10 my-6 md:my-12 container bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
   <div class= "my-6 font-bold text-center text-2xl text-yellow-900">
     今食べたいスイーツ診断
   </div>
