edit:フッターレイアウト変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,5 +37,5 @@
     </nav>
   </div>
 <% else %>
-  <div class="my-10 text-center">投稿がありません</div>
+  <div class="my-20 md:my-40 lg:my-62 text-center">投稿がありません</div>
 <% end %>
