--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,11 @@
 <footer>
-  <nav style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);" class="p-2 flex items-center justify-between bg-yellow-50">
-    <div class="m-1 flex items-center justify-center text-xs font-semibold">
-        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "問い合わせフォーム", "https://docs.google.com/forms/d/e/1FAIpQLSdeXY7nQx26ak-9ocBXlJh-ttvN7OqTM8Ayfpw73tBzw_kQ0A/viewform?usp=header" %></div>
-        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "プライバシーポリシー", privacy_policy_path %></div>
-        <div class="p-4 text-yellow-900 hover:text-yellow-700"><%= link_to "利用規約", terms_of_service_path %></div>
+  <nav style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);" class="py-7 px-2 flex items-center justify-center md:justify-between bg-yellow-50">
+    <div class="flex flex-col md:flex-row items-center justify-center text-xs text-yellow-900">
+      <div class="px-2 pb-2 md:pb-0 md:px-4 hover:text-yellow-700 font-semibold"><%= link_to "問い合わせフォーム", "https://docs.google.com/forms/d/e/1FAIpQLSdeXY7nQx26ak-9ocBXlJh-ttvN7OqTM8Ayfpw73tBzw_kQ0A/viewform?usp=header" %></div>
+      <div class="px-2 pb-2 md:pb-0 md:px-4 hover:text-yellow-700 font-semibold"><%= link_to "プライバシーポリシー", privacy_policy_path %></div>
+      <div class="px-2 pb-2 md:pb-0 md:px-4 hover:text-yellow-700 font-semibold"><%= link_to "利用規約", terms_of_service_path %></div>
+      <div class="px-2 flex md:hidden px-4">Copyright © 2025 SweetsLog</div>
     </div>
-    <div class="text-yellow-900">Copyright © 2025 SweetsLog</div>
+    <div class="hidden md:flex px-4 text-yellow-900">Copyright © 2025 SweetsLog</div>
   </nav>
 </footer>
