--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,24 +1,10 @@
 <%= render "shared/flash_messages" %>
-<div class="flex flex-col items-center justify-center m-10">
-  <%= image_tag "SweetsLog_logo.png" %>
-  <ul class= "text-center text-xs sm:text-base text-yellow-900">
-    <li>美味しい<span class="font-bold text-base sm:text-lg">「スイーツ」</span>を食べた</li>
-    <li>幸せな思い出<span class="font-bold text-base sm:text-lg">「ログ」</span>しよう</li>
-  </ul>
+<div class="flex flex-col items-center justify-center my-25 mx-5">
+  <%= image_tag "top.png" %>
 </div>
 
-<div class="overflow-hidden">
-  <div class="slider">
-    <% @posts.each do |post| %>
-      <% if post.image.attached? %>
-        <div><%= image_tag(post.image.variant(resize_to_fill: [320, 320]), class:"rounded-xl") %></div>
-      <% end %>
-    <% end %>
-  </div>
-</div>
-
-<div class="flex flex-col items-center justify-center animate-bounce">
-  <span class="mt-5 text-yellow-900">Scroll</span>
+<div class="mb-8 flex flex-col items-center justify-center animate-bounce">
+  <span class="text-yellow-900">Scroll</span>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5 text-yellow-900">
   <path fill-rule="evenodd" d="M11.47 13.28a.75.75 0 0 0 1.06 0l7.5-7.5a.75.75 0 0 0-1.06-1.06L12 11.69 5.03 4.72a.75.75 0 0 0-1.06 1.06l7.5 7.5Z" clip-rule="evenodd" />
   <path fill-rule="evenodd" d="M11.47 19.28a.75.75 0 0 0 1.06 0l7.5-7.5a.75.75 0 1 0-1.06-1.06L12 17.69l-6.97-6.97a.75.75 0 0 0-1.06 1.06l7.5 7.5Z" clip-rule="evenodd" />
@@ -26,6 +12,15 @@
 </div>
 
 <div class="box fadeIn">
+  <div class="overflow-hidden">
+    <div class="slider">
+      <% @posts.each do |post| %>
+        <% if post.image.attached? %>
+          <div><%= image_tag(post.image.variant(resize_to_fill: [420, 420]), class:"rounded-xl") %></div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
   <div class="m-10 text-center text-xs sm:text-base text-yellow-900">
     <ul>
       <li><span class="text-lg font-bold">SweetsLog</span> は</li>
@@ -33,7 +28,9 @@
       <li>シェアできるアプリです。</li>
     </ul>
   </div>
+</div>
 
+<div class="box fadeIn">
   <div class="mx-auto max-w-[90%]">
     <div class="mb-12 justify-items-center grid grid-cols-1 gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
       <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
