edit:トップページ先頭にボタン追加

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -3,6 +3,7 @@
 @import "./simple_calendar.css";
 @import "./fade_in.css";
 @import "./header.css";
+@import "./top.css";
 
 body {
   background-color: var(--color-yellow-50);
