--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/flash_messages" %>
-<div class="flex flex-col items-center justify-center my-18">
+<div class="flex flex-col items-center justify-center my-25 sm:my-18">
   <%= image_tag "top.png" %>
   <div class="flex items-center justify-center space-x-5">
     <% if user_signed_in? %>
