edit:投稿一覧レイアウト

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
-<div class="w-65 h-72 p-4 bg-white shadow-sm shadow-2xs rounded-xl">
+<div class="w-60 h-72 p-4 bg-white shadow-sm shadow-2xs rounded-xl">
   <div class="group relative block shrink-0 self-start overflow-hidden">
-    <div class="m-2 flex flex-wrap justify-center mx-auto">
+    <div class="flex flex-wrap justify-center mx-auto">
       <%= link_to post_path(post), class: "group" do %>
         <% if post.image.attached? %>
           <%= image_tag url_for(post.image.variant(resize_to_fill: [200, 200])), class: "z-0 rounded-xl transition duration-200 group-hover:scale-105" %>
@@ -10,14 +10,14 @@
       <% end %>
     </div>
   </div>
-  <div class="text-base text-center font-bold text-yellow-900 truncate max-w-[95%]">
+  <div class="mt-2 text-base text-center font-bold text-yellow-900 truncate max-w-[95%]">
     <%= link_to post.title, post_path(post), class: "hover:text-yellow-600" %>
   </div>
-  <div class="flex items-end justify-between mt-auto">
+  <div class="flex items-center justify-between">
     <div class="flex justify-self-start text-yellow-600">
       <%= post.created_at.strftime('%Y/%m/%d') %>
     </div>
-    <div class="comment_and_like">
+    <div class="comment_and_like pt-1">
       <div class="inline-flex gap-1">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5.5 text-yellow-950">
         <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z" />
