--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,28 +4,7 @@
   <%= render "search_form", q: @q, url: posts_path %>
 </div>
 
-<% if params[:q].blank? && params[:tag_name].blank? && (params[:page].blank? || params[:page] == "1") %>
-  <% if @recommend_posts.present? %>
-    <div class="mx-auto w-[85%] lg:w-[70%]">
-      <div class="mb-4 flex items-center justify-center">
-        <div class="flex-grow border-t border-yellow-700"></div>
-          <span class="mx-4 text-yellow-900 font-bold text-sm md:text-lg tracking-wide">
-            あなたへのおすすめ
-          </span>
-        <div class="flex-grow border-t border-yellow-700"></div>
-      </div>
-    </div>
-        
-    <div class="max-w-260 mx-auto">
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 justify-items-center">
-        <%= render @recommend_posts, show_actions: false %>
-      </div>
-    </div>
-    <div class="mx-auto w-[85%] lg:w-[70%]">
-      <div class="mt-8 border-b border-yellow-700"></div>
-    </div>
-  <% end %>
-<% end %>
+<%= render "recommend" %>
 
 <% if @posts.present? %>
   <div class="my-8 max-w-260 mx-auto">
