edit:レイアウト調整、フラッシュメッセージのコード移動

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
     <% else %>
       <%= render 'shared/before_login_header' %>
     <% end %>
+
+    <%= render "shared/flash_messages" %>
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
