--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
-<div class="my-8">
+<div class="mt-10 mb-7">
   <%= render "search_form", q: @q, url: posts_path %>
 </div>
 
 <%= render "recommend" %>
 
 <% if @posts.present? %>
-  <div class="my-8 max-w-260 mx-auto">
+  <div class="my-6 max-w-260 mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-5 justify-items-center">
       <%= render @posts %>
     </div>
