--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -29,11 +29,11 @@
       <% end %>
     </div>
   </div>
-  <div class="m-10 text-center text-xs sm:text-base text-yellow-900">
+  <div class="text-center text-xs sm:text-base text-yellow-900">
     <ul>
       <li><span class="text-lg font-bold">SweetsLog</span> は</li>
-      <li>美味しいスイーツを食べた幸せな記憶を記録し、</li>
-      <li>シェアできるアプリです。</li>
+      <li>美味しいスイーツを食べた幸せな記憶を</li>
+      <li>記録、シェアできるアプリです。</li>
     </ul>
   </div>
 </div>
