edit:文字色、文言

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
     <%= link_to post.title, post_path(post), class: "hover:text-yellow-600" %>
   </div>
   <div class="flex items-center justify-between">
-    <div class="flex justify-self-start text-yellow-600">
+    <div class="flex justify-self-start text-gray-400">
       <%= post.created_at.strftime('%Y/%m/%d') %>
     </div>
     <div class="comment_and_like pt-1">
