--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -29,14 +29,17 @@
       <% end %>
     </div>
   </div>
-  <div class="text-center text-xs sm:text-base text-yellow-900">
+  <div class="my-6 text-center text-xs sm:text-base text-yellow-900">
     <ul>
-      <li><span class="text-lg font-bold">SweetsLog</span> は</li>
-      <li>美味しいスイーツを食べた幸せな記憶を</li>
-      <li>記録、シェアできるアプリです。</li>
+      <li><span class="text-lg md:text-xl font-bold">SweetsLog</span> は</li>
+      <li>お店で食べて美味しかったスイーツを</li>
+      <li>写真や言葉とともに記録し、</li>
+      <li>シェアできるアプリです。</li>
     </ul>
   </div>
 </div>
+
+
 
 <div class="box fadeIn">
   <div class="mx-auto max-w-[90%]">
