add:コメント通知機能

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,16 @@
 
     <div class="hidden lg:flex">
       <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
+        <details id="notificationDropdown" class="relative">
+          <summary class="brown-button flex items-center gap-2 cursor-pointer">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
+              <path fill-rule="evenodd" d="M5.25 9a6.75 6.75 0 0 1 13.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 0 1-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 1 1-7.48 0 24.585 24.585 0 0 1-4.831-1.244.75.75 0 0 1-.298-1.205A8.217 8.217 0 0 0 5.25 9.75V9Zm4.502 8.9a2.25 2.25 0 1 0 4.496 0 25.057 25.057 0 0 1-4.496 0Z" clip-rule="evenodd" />
+            </svg><span id="notification-count"><%= current_user.passive_notifications.where(checked: false).count %></span>
+          </summary>
+          <ul class="absolute right-0 mt-2 w-83 bg-white shadow-lg rounded-lg overflow-hidden z-50">
+            <%= render partial: "notifications/notification", locals: { notifications: current_user.passive_notifications.limit(5) } %>
+          </ul>
+        </details>
         <%= link_to "投稿する", new_post_path, class: "#{current_page?(new_post_path) ? "current-brown-button" : "brown-button"}" %>
         <%= link_to "投稿一覧", posts_path, class: "#{current_page?(posts_path) ? "current-brown-button" : "brown-button"}" %>
         <%= link_to "お気に入り", likes_posts_path, class: "#{current_page?(likes_posts_path) ? "current-brown-button" : "brown-button"}" %>
