--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,46 +6,52 @@
       <% end %>
     </div>
 
-    <div class="hidden lg:flex">
-      <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
-        <details id="notificationDropdown" class="relative">
-          <summary class="brown-button flex items-center gap-2 cursor-pointer">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
-              <path fill-rule="evenodd" d="M5.25 9a6.75 6.75 0 0 1 13.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 0 1-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 1 1-7.48 0 24.585 24.585 0 0 1-4.831-1.244.75.75 0 0 1-.298-1.205A8.217 8.217 0 0 0 5.25 9.75V9Zm4.502 8.9a2.25 2.25 0 1 0 4.496 0 25.057 25.057 0 0 1-4.496 0Z" clip-rule="evenodd" />
-            </svg><span id="notification-count"><%= current_user.passive_notifications.where(checked: false).count %></span>
-          </summary>
-          <ul class="absolute right-0 mt-2 w-83 bg-white shadow-lg rounded-lg overflow-hidden z-50">
-            <%= render partial: "notifications/notification", locals: { notifications: current_user.passive_notifications.limit(5) } %>
-          </ul>
-        </details>
-        <%= link_to "投稿する", new_post_path, class: "#{current_page?(new_post_path) ? "current-brown-button" : "brown-button"}" %>
-        <%= link_to "投稿一覧", posts_path, class: "#{current_page?(posts_path) ? "current-brown-button" : "brown-button"}" %>
-        <%= link_to "お気に入り", likes_posts_path, class: "#{current_page?(likes_posts_path) ? "current-brown-button" : "brown-button"}" %>
-        <%= link_to "スイーツ診断", new_diagnose_path, class: "#{current_page?(new_diagnose_path) ? "current-brown-button" : "brown-button"}" %>
-        <%= link_to "マイページ", user_path(current_user), class: "#{current_page?(user_path(current_user.id)) ? "current-brown-button" : "brown-button"}" %>
-        <%= button_to "ログアウト", destroy_user_session_path, method: :delete, class: "brown-button cursor-pointer" %>
-      </ul>
-    </div>
+    <div class="flex ml-2">
+      <details id="notificationDropdown" class="relative">
+        <summary class="notifications-brown-button flex items-center cursor-pointer">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
+            <path fill-rule="evenodd" d="M5.25 9a6.75 6.75 0 0 1 13.5 0v.75c0 2.123.8 4.057 2.118 5.52a.75.75 0 0 1-.297 1.206c-1.544.57-3.16.99-4.831 1.243a3.75 3.75 0 1 1-7.48 0 24.585 24.585 0 0 1-4.831-1.244.75.75 0 0 1-.298-1.205A8.217 8.217 0 0 0 5.25 9.75V9Zm4.502 8.9a2.25 2.25 0 1 0 4.496 0 25.057 25.057 0 0 1-4.496 0Z" clip-rule="evenodd" />
+          </svg>
+          <% if current_user.passive_notifications.where(checked: false).exists? %>
+            <span id="notification-count" class="ml-1 bg-yellow-500 rounded-xl px-1.5"><%= current_user.passive_notifications.where(checked: false).count %></span>
+          <% end %>
+        </summary>
+        <ul class="absolute right-0 mt-2 w-95 bg-white shadow-lg rounded-lg overflow-hidden z-50">
+          <%= render partial: "notifications/notification", locals: { notifications: current_user.passive_notifications.limit(10) } %>
+        </ul>
+      </details>
 
-    <nav class="mr-4 lg:hidden">
-      <button id="togglebutton" class="mt-2">
-        <svg id="openbutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
-        <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
-        </svg>
-        <svg id="closebutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="hidden size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
-        <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
-        </svg>
-      </button>
+      <div class="hidden lg:flex">
+        <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
+          <%= link_to "投稿する", new_post_path, class: "#{current_page?(new_post_path) ? "current-brown-button" : "brown-button"}" %>
+          <%= link_to "投稿一覧", posts_path, class: "#{current_page?(posts_path) ? "current-brown-button" : "brown-button"}" %>
+          <%= link_to "お気に入り", likes_posts_path, class: "#{current_page?(likes_posts_path) ? "current-brown-button" : "brown-button"}" %>
+          <%= link_to "スイーツ診断", new_diagnose_path, class: "#{current_page?(new_diagnose_path) ? "current-brown-button" : "brown-button"}" %>
+          <%= link_to "マイページ", user_path(current_user), class: "#{current_page?(user_path(current_user.id)) ? "current-brown-button" : "brown-button"}" %>
+          <%= button_to "ログアウト", destroy_user_session_path, method: :delete, class: "brown-button cursor-pointer" %>
+        </ul>
+      </div>
+
+      <nav class="mr-4 lg:hidden">
+        <button id="togglebutton" class="mt-2">
+          <svg id="openbutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+          <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+          </svg>
+          <svg id="closebutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="hidden size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+          <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+          </svg>
+        </button>
+      </nav>
     </nav>
-  </nav>
-  <ul id="minimenu" class="hidden mx-auto w-full bg-yellow-900 text-center text-yellow-50 font-semibold">
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to "投稿する", new_post_path %></li>
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to "投稿一覧", posts_path %></li>
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to "お気に入り", likes_posts_path %></li>
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to "スイーツ診断", new_diagnose_path %></li>
-    <li class= "p-2 hover:bg-yellow-700"><%= link_to "マイページ", user_path(current_user.id) %></li>
-    <li class= "p-2 hover:bg-yellow-700"><%= button_to "ログアウト", destroy_user_session_path, method: :delete, class:"cursor-pointer" %></li>
-  </ul>
+    <ul id="minimenu" class="hidden mx-auto w-full bg-yellow-900 text-center text-yellow-50 font-semibold">
+      <li class= "p-2 hover:bg-yellow-700"><%= link_to "投稿する", new_post_path %></li>
+      <li class= "p-2 hover:bg-yellow-700"><%= link_to "投稿一覧", posts_path %></li>
+      <li class= "p-2 hover:bg-yellow-700"><%= link_to "お気に入り", likes_posts_path %></li>
+      <li class= "p-2 hover:bg-yellow-700"><%= link_to "スイーツ診断", new_diagnose_path %></li>
+      <li class= "p-2 hover:bg-yellow-700"><%= link_to "マイページ", user_path(current_user.id) %></li>
+      <li class= "p-2 hover:bg-yellow-700"><%= button_to "ログアウト", destroy_user_session_path, method: :delete, class:"cursor-pointer" %></li>
+    </ul>
+  </div>
 </header>
 <script>
   togglebutton.addEventListener('click', event => {
