--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -92,22 +92,13 @@
       zoom: 15,
       center: mapPosition
     });
+
     const transitLayer = new google.maps.TransitLayer();
     transitLayer.setMap(map);
 
-    const contentString = "【住所】<%= @post.address %>";
-    const infowindow = new google.maps.InfoWindow({
-      content: contentString
-    });
-
     const marker = new google.maps.Marker({
       position: mapPosition,
-      map: map,
-      title: contentString
-    });
-
-    marker.addListener("click", function(){
-      infowindow.open(map, marker);
+      map: map
     });
   }
 </script>
