--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center my-25 sm:my-18">
+<div class="flex flex-col items-center justify-center my-25 sm:my-12">
   <%= image_tag "top.png" %>
   <div class="flex items-center justify-center space-x-5">
     <% if user_signed_in? %>
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="mb-8 flex flex-col items-center justify-center animate-bounce">
+<div class="my-8 flex flex-col items-center justify-center animate-bounce">
   <span class="text-yellow-900">Scroll</span>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5 text-yellow-900">
   <path fill-rule="evenodd" d="M11.47 13.28a.75.75 0 0 0 1.06 0l7.5-7.5a.75.75 0 0 0-1.06-1.06L12 11.69 5.03 4.72a.75.75 0 0 0-1.06 1.06l7.5 7.5Z" clip-rule="evenodd" />
