--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,10 @@
           <a class="container w-65 h-65 sm:h-95 sm:w-95 mx-auto flex items-center justify-center rounded-xl bg-gray-300"></a>
         <% end %>
         <div class="my-5 flex flex-col">
-          <%= f.label :image, class: "text-yellow-950 font-bold" %>
+          <div class= "flex">
+            <%= f.label :image, class: "text-yellow-950 font-bold" %>
+            <span class="text-yellow-950 font-bold">（スイーツの写真）</span>
+          </div>
           <%= f.file_field :image, id: "image", accept: ".jpeg, .gif, .png, .jpg", class: "w-65 sm:w-100 py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded text-gray-500 cursor-pointer" %>
         </div>
 
